[1.1] New features and bug fixes # New - When hour of the day is 22, the article 'Cidre' comes from 2.5€ to 2€ - Users which are granted ROLE_INTRO can register an Ecocup return - Users which are not granted ROLE_BUREAU can't make a transaction implying that an account goes under 0€ - Search by Algolia logo is now displayed when it is needed (Community Plan) # Fixes - iPhone users can now un-collapse item groups - Disabled the validation for account creation - When creating an article/account/user, redirecting to the creation page for quicker experience when creating multiple instances at once - Fixed bug inserting -1 to Total when validating the choice of an account with Enter

--- a/web/css/caisse.css
+++ b/web/css/caisse.css
@@ -1,3 +1,8 @@
+button.alert {
+    width: 100%;
+    text-align: left;
+}
+
 .affichage-articles {
     margin-bottom: 16px;
 }
@@ -22,8 +27,31 @@
     margin-bottom: 1rem !important;
 }
 
+.algolia-autocomplete {
+    width: 100%;
+}
+
 .algolia-autocomplete span {
     top:80% !important;
+    width: 100%;
+}
+
+.algolia-autocomplete span div {
+    width: 100%;
+}
+
+.aa-dropdown-menu::after {
+
+}
+
+#algolia-brand {
+    text-align: right;
+    opacity: 0.2;
+    transition: all 0.1s ease-in;
+}
+
+#algolia-brand:hover {
+    opacity: 1;
 }
 
 .input-group-prepend .custom-select, .input-group-append .custom-select {
@@ -47,6 +75,10 @@
 
 a.dropdown-item {
     color: inherit;
+}
+
+#modalAccount .modal-footer {
+    justify-content: space-between;
 }
 
 /*.algolia-autocomplete input {
